--- a/app/src/views/index.ejs
+++ b/app/src/views/index.ejs
@@ -3,11 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>NodeSampleApp</title>
-        <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        <div id="app">
-		 	<app></app>
-		 </div>
+        <h1>NodeSampleApp</h1>
     </body>
 </html>
